
ModuleManager v2.1.2
  - Now sort modules in the installed tab a bit better.
  - Now handle module 'not available' a bit better.

FileManager v1.6.4
  - Add a different icon for navigating up one level.
  - No longer allow uploading any php (or derivative) file.
  - No longer allow renaming any file to have a .php extension (or a derivative).

FilePicker v1.0.1
  - No longer allow overriding the filepicker type on the URL.
  - No longer allow uploading any .php files.

CMSContentmanager v1.1.6
  - Now double check that the 'default parent' for new pages actually exists.

Version 2.2.2 - Hearts Content
----------------------------------
Core - General
 - Additional security improvement in CMSModule::GetTemplateResource().
 - Now Smarty_CMS is no longer derived from SmartyBC (uses our own wrapper class) which prevents all occurrences of {php} tags from running.
 - Adds an admin directory .htaccess file to explicitly disable browser caching of any resources.
 - Fixes a relative path vulnerability in module_file_tpl resource.
 - Fixes a path building issue in CmsModuleInfo.
 - Fixes to parsing and generating moduleinfo.ini files.
 - Disallow any resource specifications with a * or a /.
     * This also means that no file resource specifications with path information will be permitted.
 - Move mact preprocessing to AFTER the template_top has been processed. So order of processing (for module actions on the frontend is)
     a:  template top
     b:  mact preprocessing (if enabled, which is the default)
     c:  template body
     d:  template head
 - Fix sureGetNodeByAlias to check if the input is numeric. If it is, assume that it is a page id, not an alias.
 - Fix alias generation in the ContentBase class to check if the input page title is numeric... If it is, prepend a character to it to ensure that integer casting will return 0.
 - Fix listtags to show tags using smarty_nocache_ function name prefix.
 - Improvements to the {form_start} plugin.