@@ -7,7 +7,7 @@ if (!isset($params["filename"]) || !isset($params["path"])) {
   $this->Redirect($id, 'defaultadmin');
 }
 
-if( filemanager_utils::test_invalid_path($params['path']) ) {
+if( !filemanager_utils::test_valid_path($params['path']) ) {
   $this->Redirect($id, 'defaultadmin', $returnid, array("fmerror" => "fileoutsideuploads"));
 }
 
