@@ -2,7 +2,7 @@
 if (!function_exists("cmsms")) exit;
 if (!$this->CheckPermission("Modify Files") && !$this->AdvancedAccessAllowed()) exit;
 if (!isset($params["path"])) $this->Redirect($id, 'defaultadmin');
-if( filemanager_utils::test_invalid_path($params['path']) ) {
+if( !filemanager_utils::test_valid_path($params['path']) ) {
   $this->Redirect($id, 'defaultadmin',$returnid,array("fmerror"=>"fileoutsideuploads"));
 }
 
